Se termina vista de listar

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,24 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div id="navbarSupportedContent" class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a routerLink="listar" class="nav-link">Listar</a>
-                    </li>
-                    <li class="nav-item">
-                      <a routerLink="crear" class="nav-link">Crear</a>
-                    </li>
-                    <li class="nav-item">
-                      <a routerLink="editar" class="nav-link">Editar</a>
-                    </li>
-                    <li class="nav-item">
-                      <a routerLink="borrar" class="nav-link">Borrar</a>
-                    </li>
-                  </ul>
-    </div>
+  <a class="navbar-brand" href="#">
+    <img src="../../assets/img/libros.png" height="40" width="40"> Inicio
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div id="navbarSupportedContent" class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a routerLink="listar" class="nav-link">Listar</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="crear" class="nav-link">Crear</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="editar" class="nav-link">Editar</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="borrar" class="nav-link">Borrar</a>
+      </li>
+    </ul>
+  </div>
 </nav>
-
-
