--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <app-menu></app-menu>
   </div>
   <div class="card-body">
+      <div class="form-group">
+        <label for="id" class="text-white">Ingresar ID del libro a buscar:</label>
+        <input type="text" #id class="form-control col-3"></div>
+      <div class="form-group"><input type="button" class="btn btn-info" value="Buscar"></div>
     <router-outlet></router-outlet>
   </div>
 </div>
