--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -23,3 +23,35 @@
     </ul>
   </div>
 </nav>
+<div class="form-group">
+  <label for="id" class="text-white">Ingresar ID del libro a buscar:</label>
+  <input type="text" #id class="form-control col-3"></div>
+<div class="form-group"><input type="button" class="btn btn-info" value="Buscar" (click)="getLibro(id.value)"></div>
+
+<table *ngIf="libro" class="table table-dark table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>Título</th>
+        <th>Autor</th>
+        <th>Edición</th>
+        <th>Num.Copias</th>
+        <th>Acciones</th>
+      </tr>
+
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{libro.titulo}}</td>
+        <td>{{libro.autor}}</td>
+        <td>{{libro.edicion}}</td>
+        <td>{{libro.numcopias}}</td>
+        <td>
+
+          <button class="btn btn-outline-warning" (click)="getLibro(libro.idlibro)">Editar</button>&nbsp;
+          <button class="btn btn-outline-danger" (click)="getLibro(libro.idlibro)">Borrar</button>
+
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
