--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -28,7 +28,7 @@
   <input type="text" #id class="form-control col-3"></div>
 <div class="form-group"><input type="button" class="btn btn-info" value="Buscar" (click)="getLibro(id.value)"></div>
 
-<table *ngIf="libro.numcopias!=0" class="table table-dark table-bordered table-striped">
+<table *ngIf="libro.titulo!=null" class="table table-dark table-bordered table-striped">
     <thead>
       <tr>
         <th>Título</th>
