--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -28,7 +28,7 @@
   <input type="text" #id class="form-control col-3"></div>
 <div class="form-group"><input type="button" class="btn btn-info" value="Buscar" (click)="getLibro(id.value)"></div>
 
-<table *ngIf="libro.titulo!=null" class="table table-dark table-bordered table-striped">
+<table *ngIf="libro.titulo!=null;else id_invalido" class="table table-dark table-bordered table-striped">
     <thead>
       <tr>
         <th>Título</th>
@@ -47,11 +47,12 @@
         <td>{{libro.numcopias}}</td>
         <td>
 
-          <button class="btn btn-outline-warning" (click)="getLibro(libro.idlibro)">Editar</button>&nbsp;
-          <button class="btn btn-outline-danger" (click)="getLibro(libro.idlibro)">Borrar</button>
+           <a class="btn btn-outline-warning" routerLink="../borrar/{{libro.idlibro}}">Editar</a>&nbsp;
+           <a class="btn btn-outline-danger" routerLink="../borrar/{{libro.idlibro}}">Borrar</a>
 
         </td>
       </tr>
 
     </tbody>
   </table>
+  <ng-template #id_invalido> <h2 class="text-center text-white"> ID Inválido</h2> </ng-template>
