--- a/src/app/componentes/borrar/borrar.component.html
+++ b/src/app/componentes/borrar/borrar.component.html
@@ -17,6 +17,7 @@
             <input class="form-control" readonly [(ngModel)]="libro.numcopias">
         </p>
         <p>
-            <button class="btn btn-danger" (click)="deleteLibro(libro.idlibro)">Eliminar</button>
+            <button class="btn btn-danger mx-2" (click)="deleteLibro(libro.idlibro)">Eliminar</button>
+            <button class="btn btn-success" routerLink="/listar">Cancelar</button>
         </p>
     </div>
