--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -41,7 +41,7 @@
         <td>{{libro.numcopias}}</td>
         <td>
 
-           <a class="btn btn-outline-warning" routerLink="../borrar/{{libro.idlibro}}">Editar</a>&nbsp;
+           <a class="btn btn-outline-warning" routerLink="../editar/{{libro.idlibro}}">Editar</a>&nbsp;
            <a class="btn btn-outline-danger" routerLink="../borrar/{{libro.idlibro}}">Borrar</a>
 
         </td>
